fix color of footer copyright text to increase contrast

--- a/lms/static/sass/base/_branding-basics.scss
+++ b/lms/static/sass/base/_branding-basics.scss
@@ -86,7 +86,7 @@ $footer-logo-padding-vertical: 1rem;
 $footer-logo-width: 4rem;
 $footer-logo-opacity: 0.5;
 $footer-copyright-text-size: 1.2rem;
-$footer-copyright-text-color: lighten($footer-text-color, 15%);
+$footer-copyright-text-color: lighten($footer-text-color, 10%);
 $footer-copyright-breathe-space: 1rem;
 
 
